readmore alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 html{
     scroll-behavior: smooth;
-  
+  background-color: black;
+  justify-content: center;
+  margin: auto;
 }
 *{
  margin: auto;
@@ -113,21 +115,11 @@ width: 20px;
 color: white;
 
 }
-.abtbtn{
-    align-items: center;
-border: 2px solid white;
-width: 100px;
-height: 50px;
-margin: auto;
-margin-top: 100px;
-padding: 10px;
-border-radius: 30px;
-padding-left: 12px;
-}
+
 
 .dv{
     position: absolute;
-
+padding-top: 100px;
     top: 50px;
     left: 200px;
 }
@@ -136,22 +128,29 @@ padding-left: 12px;
     width: 80%;
     height: fit-content;
 border: 1.5px solid rgb(255, 255, 255);
-padding: 6%;
-border-radius: 60px;
-background: rgba(75, 75, 75, 0.337);
+justify-content: center;
 
+border-radius: 44px;
+background: rgba(75, 75, 75, 0.337);
+padding: 3%;
 }
 .readmore{
-    padding: 10%;
+    margin: auto;
+    text-align: center;
+    font-weight: lighter; 
+    padding-top:50px ;
 }
 .readmorebtn{
-    margin-left: 26%;
+    margin: auto;
+    
+    align-items: center;
     border: 1.5px solid white;
     width: 100px;
-   height: 30px;
-   padding-left: 3%;
-   border-radius: 45px;
+   height: 40px;
+   
+   border-radius: 60px;
    cursor: pointer;
+   padding: 2%;
 }
 #wlcm{
     display: none;
